[project]
name = "coop-marl"
version = "0.0.1"
description = "DPT-Agent upstream snapshot with coop_marl, gym_cooking, and agent utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru",
    "backoff>=2.2.1",
    "openai>=2.15.0",
    "torch>=2.9.1",
    "tensorboard>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "coop_marl",
    "agents",
    "llms",
    "prompts",
    "utils",
    "webapp",
]

[tool.hatch.build.targets.wheel.force-include]
"coop_marl/envs/overcooked/gym_cooking" = "gym_cooking"
"coop_marl/utils/rebar/rebar" = "rebar"

[tool.hatch.build.targets.sdist]
include = [
    "/coop_marl",
    "/agents",
    "/llms",
    "/prompts",
    "/utils",
    "/webapp",
    "/config",
    "/assets",
    "/scripts",
    "/coop_marl/envs/overcooked/gym_cooking",
    "/coop_marl/utils/rebar/rebar",
]
